# swap

./: .env.example  .gitignore  ADMIN_DASHBOARD_SETUP.md  ADMIN_QUICK_START.md  CHECKPOINT.md  DASHBOARD_ACCESS_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  E2E_TESTING_GUIDE.md  FRONTEND_COMPLETE.md  FRONTEND_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_TESTING_GUIDE.md  LOCAL_SETUP.md  MODERN_ADMIN_DASHBOARD.md  PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_LOCAL.md  README.md  SESSION_SUMMARY.md  TEST_REPORT.md  auth_logs.txt  check_requirements.ps1  cypress.config.ts  docker-compose.test.yml  docker-compose.yml  package-lock.json  payments.db  pyproject.toml  requirements.txt  run_services_local.ps1  run_services_local.sh  setup_databases.ps1  setup_databases.sh  test_apis.ps1
.github/: copilot-instructions.md
cypress/e2e/: auth.cy.ts  chat.cy.ts  listings.cy.ts  offers.cy.ts  wallet.cy.ts
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
nginx/: Dockerfile  nginx.conf
scripts/: run_tests.py  seed_dummy_data.py
services/admin/: Dockerfile  README.md  init.sh  requirements.txt
shared/: __init__.py  auth.py  database.py  exceptions.py  kafka.py  models.py
tests/: Dockerfile  conftest.py  integration-tests.sh  test_auth_unit.py  test_chat_service.py  test_e2e.py  test_integration.py  test_integration_services.py  test_listing_unit.py  test_notification_service.py  test_offer_payment_unit.py
(+90 files in other folders)
